# asterism

./: Cargo.toml  README.org
asterism/: Cargo.toml
asterism/src/: collision.rs  control.rs  entity_state.rs  lending_iterator.rs  lib.rs  linking.rs  physics.rs  resources.rs  tables.rs
asterism/src/graphics/: draw.rs  mod.rs  shapes.rs
prototypes/: README.md
prototypes/boxsy/: Cargo.toml
prototypes/boxsy-ceptre/: Cargo.toml
prototypes/boxsy-ceptre/src/: boxsy_info.rs  convert.rs  crawler.json  json.rs  lib.rs  main.rs  parse.rs
prototypes/boxsy-ceptre/src/ceptre-files/: crawler-alt.cep  crawler-alt.json  crawler.json
prototypes/boxsy-ceptre/src/convert/: builtins.rs  ctypes.rs  mod.rs  pred.rs  rules.rs  state.rs
prototypes/boxsy/src/: collision.rs  entities.rs  events.rs  lib.rs  types.rs
prototypes/ceptre-annotes/: Cargo.toml
prototypes/paddles-engine/: Cargo.toml
prototypes/paddles-engine/src/: entities.rs  events.rs  lib.rs  types.rs
