[package]
name = "boxsy-ceptre"
version = "0.1.0"
edition = "2021"
authors = ["cynthia <licynthia.x@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
serde_json = "1.0"
serde = { version = "1.0.196", features = ["derive"] }
asterism = { path = "../../asterism" }
boxsy = { path = "../boxsy" }
macroquad = "0.4.4"
